--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <body>
         <h1>
-            Patrick4dev's Github Page
+            Patrick4dev's Github Pages
         </h1>
         <h4>
-            <a href="https://Patrick4dev.github.io">
+            <a href="https://patrick4dev.github.io">
                 Patrick4dev.github.io
             </a>
         </h4>
