--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-    <meta name=”viewport” content=”width=device-width, initial-scale=1″ />
     <head>
+        <meta name=”viewport” content=”width=device-width, initial-scale=1″ />
+        <title>
+            Patrick4dev's Github Pages
+        </title>
         <h1>
             Patrick4dev's Github Pages
         </h1>
@@ -18,7 +21,7 @@
             }
         </style>
         <div id="image">
-            <img scr="http://t1.aixinxi.net/o_1c5vrkgr3m9v1a841bu10el6hfa.jpg-w.jpg" width="" heigth=""/>
+            <img scr="http://t1.aixinxi.net/o_1c5vrkgr3m9v1a841bu10el6hfa.jpg-w.jpg" width=100% heigth=auto/>
         </div>
         <p>
             Waiting For Update...
