--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             }
         </style>
         <div id="image">
-            <img scr="http://t1.aixinxi.net/o_1c5vrkgr3m9v1a841bu10el6hfa.jpg-w.jpg" width=100% heigth=auto/>
+            <img scr="http://t1.aixinxi.net/o_1c5vrkgr3m9v1a841bu10el6hfa.jpg-w.jpg" width=100% heigth=100%/>
         </div>
         <p>
             Waiting For Update...
