--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <title>
             Patrick4dev's Github Pages
         </title>
-        <h1>
+        <h1 style="font-family:courier new">
             Patrick4dev's Github Pages
         </h1>
-        <h4>
+        <h4 style="font-family:courier new">
             <a href="https://patrick4dev.github.io">
                 Patrick4dev.github.io
             </a>
@@ -17,13 +17,14 @@
         <style type="text/css">
             #image img{
                 max-width: 100%;
-                max-height: 100%;
+                width: auto\9;
+                height: auto;
             }
         </style>
         <div id="image">
-            <img scr="http://t1.aixinxi.net/o_1c5vrkgr3m9v1a841bu10el6hfa.jpg-w.jpg" width=100% heigth=100%/>
+            <img scr="http://t1.aixinxi.net/o_1c5vrkgr3m9v1a841bu10el6hfa.jpg-w.jpg"/>
         </div>
-        <p>
+        <p style="font-family:courier new">
             Waiting For Update...
         </p>
     </body>
