--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
     <head>
-        <meta name=”viewport” content=”width=device-width, initial-scale=1″ />
+        <meta name="viewport" content="width=device-width">
         <title>
             Patrick4dev's Github Pages
         </title>
-        <h1 style="font-family:courier new">
+        <h1 style="font-family:microsoft sans serif">
             Patrick4dev's Github Pages
         </h1>
         <h4 style="font-family:courier new">
-            <a href="https://patrick4dev.github.io">
-                Patrick4dev.github.io
+            <a href="https://github.com/Patrick4dev">
+                    View My Profile->
             </a>
         </h4>
     </head>
@@ -23,9 +23,9 @@
         </style>
         <div id="image">
             <img scr="http://t1.aixinxi.net/o_1c5vrkgr3m9v1a841bu10el6hfa.jpg-w.jpg"/>
+            <p style="font-family:courier new">
+                Waiting For Update...
+            </p>
         </div>
-        <p style="font-family:courier new">
-            Waiting For Update...
-        </p>
     </body>
 </html>
