--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1 style="font-family:microsoft sans serif">
             Patrick4dev's Github Pages
         </h1>
-        <h4 style="font-family:courier new">
+        <h4 style="font-family:microsoft sans serif">
             <a href="https://github.com/Patrick4dev">
                     View My Profile->
             </a>
