--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
+        <style type="text/css">
+            #image img{
+                max-width: 100%;
+                width: auto\9;
+                height: auto;
+            }
+            h1{
+                text-align: center;
+            }
+            h4{
+                text-align: right;
+            }
+        </style>
         <title>
             Patrick4dev's Github Pages
         </title>
+    </head>
+    <body>
+        
         <h1 style="font-family:microsoft sans serif">
             Patrick4dev's Github Pages
         </h1>
@@ -12,17 +29,8 @@
                     View My Profile->
             </a>
         </h4>
-    </head>
-    <body>
-        <style type="text/css">
-            #image img{
-                max-width: 100%;
-                width: auto\9;
-                height: auto;
-            }
-        </style>
         <div id="image">
-            <img scr="Violet_Evergarden_KV3.jpg"/>
+            <img scr="/Violet_Evergarden_KV3.jpg"/>
             <p style="font-family:courier new">
                 Waiting For Update...
             </p>
