--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <style type="text/css">
             #image img{
@@ -30,7 +30,7 @@
             </a>
         </h4>
         <div id="image">
-            <img scr="/Violet_Evergarden_KV3.jpg"/>
+            <img scr="https://patrick4dev.github.io/Violet_Evergarden_KV3.jpg" width=100% height=auto/>
             <p style="font-family:courier new">
                 Waiting For Update...
             </p>
