--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </a>
         </h4>
         <div id="image">
-            <img scr="https://patrick4dev.github.io/Violet_Evergarden_KV3.jpg" width=100% height=auto/>
-            <p style="font-family:courier new">
-                Waiting For Update...
-            </p>
+        	<img src="Violet_Evergarden_KV3.jpg" alt="" longdesc="Violet_Evergarden_KV3.jpg">
         </div>
+        <p style="font-family:courier new">
+                Waiting For Update...
+        </p>
     </body>
 </html>
