--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
                 width: auto\9;
                 height: auto;
             }
-            h1{
+            h2{
                 text-align: center;
             }
             h4{
                 text-align: right;
             }
+            a:link{
+                color:blue;
+            }
+            a:visited{
+                color:blue;
+            }
+            a:hover{
+                color:blue;
+            }
+            a:active{
+                color:blue;
+            }    
         </style>
         <title>
             Patrick4dev's Github Pages
@@ -21,9 +33,9 @@
     </head>
     <body>
         
-        <h1 style="font-family:microsoft sans serif">
+        <h2 style="font-family:microsoft sans serif">
             Patrick4dev's Github Pages
-        </h1>
+        </h2>
         <h4 style="font-family:microsoft sans serif">
             <a href="https://github.com/Patrick4dev">
                     View My Profile->
