--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         </h2>
         <h4 style="font-family:microsoft sans serif">
             <a href="https://github.com/Patrick4dev">
-                    View My Profile->
+                View My Profile->
             </a>
         </h4>
         <div id="image">
-        	<img src="Violet_Evergarden_KV3.jpg" alt="" longdesc="Violet_Evergarden_KV3.jpg">
+        	<img href="http://violet-evergarden.jp/" src="Violet_Evergarden_KV3.jpg" alt="" longdesc="Violet_Evergarden_KV3.jpg">
         </div>
         <p style="font-family:courier new">
                 Waiting For Update...
