--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
                 text-align: right;
             }
             a:link{
-                color:blue;
+                color:#0066FF;
+                text-decoration:none;
             }
             a:visited{
-                color:blue;
+                color:#0066FF;
             }
             a:hover{
-                color:blue;
+                color:#0066FF;
+                text-decoration:underline;
             }
             a:active{
-                color:blue;
+                color:#0066FF;
             }    
         </style>
         <title>
