--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width; initial-scale=1.0">
         <style type="text/css">
             #image img{
                 max-width: 100%;
