--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
                 width: auto\9;
                 height: auto;
             }
-            h2{
+            h1{
                 text-align: center;
-            }
-            h4{
-                text-align: right;
             }
             a:link{
                 color:#0066FF;
@@ -34,14 +31,14 @@
         </title>
     </head>
     <body>
-        <h2 style="font-family:microsoft sans serif">
+        <h1 style="font-family:microsoft sans serif">
             Patrick4dev's Github Pages
-        </h2>
-        <h4 style="font-family:microsoft sans serif">
+        </h1>
+        <p style="font-family:microsoft sans serif; text-align: right">
             <a href="https://github.com/Patrick4dev">
                 View My Profile->
             </a>
-        </h4>
+        </p>
         <div id="image">
         	<img href="http://violet-evergarden.jp/" src="Violet_Evergarden_KV3.jpg" alt="" longdesc="Violet_Evergarden_KV3.jpg">
         </div>
