--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </a>
         </p>
         <div id="image">
-        	<img href="http://violet-evergarden.jp/" src="Violet_Evergarden_KV3.jpg" alt="" longdesc="Violet_Evergarden_KV3.jpg">
+            <a href="http://violet-evergarden.jp/">
+        	    <img src="Violet_Evergarden_KV3.jpg" alt="" longdesc="Violet_Evergarden_KV3.jpg">
+            </a>
         </div>
         <p style="font-family:courier new">
                 Waiting For Update...
