--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                 View My Profile->
             </a>
         </p>
+        <hr />
         <div id="image">
             <a href="http://violet-evergarden.jp/">
-        	    <img src="Violet_Evergarden_KV3.jpg" alt="" longdesc="Violet_Evergarden_KV3.jpg">
+        	    <img src="Violet_Evergarden_KV3.jpg" alt="Violet_Evergarden_KV3.jpg">
             </a>
         </div>
         <p style="font-family:courier new">
